# CP_MCU_Codes

./: .gitignore  CMakeLists.txt  README.md  partitions.csv  sdkconfig
Seeed_Groove_AI_Board/: compile_fw.sh  flash_factory.sh  flash_fw_ttyACM0.sh  generate_img.sh
Seeed_Groove_AI_Board/wearable_ai/: fatfs_mmc_spi_test_tz_s_only.mk  wearable_ai.c  wearable_ai.h
main/: CMakeLists.txt  idf_component.yml  main.cpp  main.h
main/NTP/: NTP.cpp  NTP.h
main/http_handle/: http_handle.cpp  http_handle.h
main/led/: led.cpp  led.h
main/mic_pdm/: mic_pdm.cpp  mic_pdm.h
main/sd_card/: sd_card.h
main/spiffs/: spiffs.cpp  spiffs.h
main/wifi/: wifi.cpp  wifi.h
v1_main_mcu/: CMakeLists.txt  partitions.csv
v1_main_mcu/main/: CMakeLists.txt  main.cpp  main.h  v1_main_mcu.c  v1_main_mcu.cpp  v1_main_mcu.h
v1_main_mcu/main/NTP/: NTP.h
v1_main_mcu/main/ble_conn/: ble_conn.cpp  ble_conn.h
v1_main_mcu/main/buttons/: buttons.cpp  buttons.h
v1_main_mcu/main/http_handle/: http_handle.cpp  http_handle.h
v1_main_mcu/main/mic_pdm/: mic_pdm.cpp  mic_pdm.h
v1_main_mcu/main/sd_card/: sd_card.cpp  sd_card.h
v1_main_mcu/main/wifi/: wifi.cpp  wifi.h
